--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,9 +1,9 @@
 Package: parglm
-Title: What the Package Does (one line, title case)
+Title: Parallel Generalized Linear Models for the GPU
 Version: 0.0.0.9000
-Authors@R: person("First", "Last", email = "first.last@example.com", role = c("aut", "cre"))
-Description: What the package does (one paragraph).
+Authors@R: person("Vilhelm", "von Ehrenheim", email = "", role = c("aut", "cre"))
+Description: parglm is an attempt to create a parallel version of the glm package using Cuda on the GPU.
 Depends: R (>= 3.2.3)
-License: What license is it under?
+License: MIT
 Encoding: UTF-8
 LazyData: true
